[package]
name = "khao"
version = "0.1.0"
authors = ["wolfwood <wolfwood@xomb.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10.8", features = ["json"] }
serde_json = "1.0.58"
