[package]
name = "khao"
version = "0.1.0"
authors = ["wolfwood <wolfwood@xomb.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.33"
reqwest = { version = "^0.10.8", features = ["json"] }
serde = { version = "^1.0.116", features = ["derive"] }
serde_json = "^1.0.58"
tokio = { version = "^0.2", features = ["macros"] }
dirs = "^3.0.1"
glob = "^0.3.0"
regex = "^1"
multimap = "^0.8.2"
#itertools = "^0.10"